--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "唐健"
 description              : "电磁无损检测"
-repository               : "linxixi-shu/linxixi-shu.github.io"
+repository               : "linxixi-shu/limengping.github.io"
 google_scholar_stats_use_cdn : false
 
 # google analytics
